--- a/head copy.css
+++ b/head copy.css
@@ -54,7 +54,13 @@ body, html {
   text-decoration: none; 
       /* h2のデフォルトの上下マージン */
 }
-a.c-txt.line {
+/* a 自身に .c-txt .line が付いているわけではないため、内側の a を直接指定する */
+.c-txt.line a,
+.c-txt.line a:link,
+.c-txt.line a:visited,
+.c-txt.line a:hover,
+.c-txt.line a:focus,
+.c-txt.line a:active {
   color: inherit !important;
   text-decoration: none !important;
 }
